--- a/hhcodingtask/templates/base.html
+++ b/hhcodingtask/templates/base.html
@@ -54,6 +54,10 @@
               </li>
               <li class="nav-item">
                 {# URL provided by django-allauth/account/urls.py #}
+                <a class="nav-link" href="{% url 'model_data' %}">{% trans "Model Data" %}</a>
+              </li>
+              <li class="nav-item">
+                {# URL provided by django-allauth/account/urls.py #}
                 <a class="nav-link" href="{% url 'account_logout' %}">{% trans "Sign Out" %}</a>
               </li>
             {% else %}
